--- a/2.html
+++ b/2.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title></title>
-		<style>
-		
-		</style>
-	</head>
-	<body>
-		<h1>修改1</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <title></title>
+    <style></style>
+  </head>
+  <body>
+    <h1>修改2</h1>
+  </body>
 </html>
